<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="Tango Data">

        <SwitchPreference
                android:key="@string/publish_device_pose_key"
                android:title="@string/publish_device_pose" />

        <SwitchPreference
            android:key="@string/publish_point_cloud_key"
            android:title="@string/publish_point_cloud" />

        <SwitchPreference
            android:key="@string/publish_fisheye_camera_key"
            android:title="@string/publish_fisheye_camera" />

        <SwitchPreference
            android:key="@string/publish_color_camera_key"
            android:title="@string/publish_color_camera" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Tango Config">

        <SwitchPreference
            android:key="@string/enable_drift_correction_key"
            android:title="@string/enable_drift_correction"
            android:defaultValue="True" />
    </PreferenceCategory>
</PreferenceScreen>